# rex_practice

./: .gitignore  CameraInfoMisc.odt  README.md
Power_Management/batteryReaderArduino/: Battery.cpp  Battery.h  CurrentMonitor.cpp  CurrentMonitor.h  Makefile  VoltageMonitor.cpp  VoltageMonitor.h  batteryReaderArduino.ino
Power_Management/iGPSArduino_fakeinput/: iGPSArduino_fakeinput.ino
PracticeLabs/: .vimrc  Makefile
PracticeLabs/attic/: BiteString.h  CRectangle.cpp  CRectangle.h  FileBuffer.cpp  ParseString.cpp  SegList.cpp  SegList.h  Vertex.h  VertexSimple.cpp  VertexSimple.h  VertexSimple_ans.cpp  VertexSimple_ans.h  arrays  arrays.cpp  class_ex1  class_ex1.cpp  derived  derived.cpp  diamond  diamond.cpp  distributed_rect  distributed_rect_main.cpp  factorial  factorial_longint.cpp  filein  filein_ans  filein_ans.cpp  first_string  first_string.cpp  func_ex1  function_hellocap  function_main.cpp  function_sepdef  hello  hello.cpp  rand_seglist  rand_seglist.cpp  rand_vertices_class  rand_vertices_class.cpp  rand_vertices_file.cpp  (+9 more)
PracticeLabs/lab02/: Makefile  (+3 more)
local_object_detection/: .localizeObjects.cpp.swp  .main.cpp.swp  CMakeCache.txt  CMakeLists.txt  LocalPoint.cpp  LocalPoint.h  Makefile  cmake_install.cmake  localizeObjects.cpp  localizeObjects.h  localized_object_detection  main.cpp  matrix_test  matrix_test.cpp  plot_grid.py
stoplight_detection/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  color_filter.cpp  color_filter.h  findObject.cpp  findObject.h  main.cpp  stoplight_detection  stoplight_detection.cpp  test_filter  test_filter.cpp  test_finder  test_finder.cpp
template_practice/: CMakeCache.txt  CMakeLists.txt  Makefile  MatchTemplate_Demo  cmake_install.cmake  face_tracker.cpp  face_tracker.h  main.cpp
(+68 files in other folders)
