cmake_minimum_required(VERSION 2.8)
project( Stoplight_Detection )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable(stoplight_detection main.cpp color_filter.cpp findObject.cpp)
add_executable(test_filter test_filter.cpp color_filter.cpp)
add_executable(test_finder test_finder.cpp findObject.cpp)
#add_executable(color_detection color_detection.cpp)
target_link_libraries( stoplight_detection ${OpenCV_LIBS} )
target_link_libraries( test_filter ${OpenCV_LIBS} )
target_link_libraries( test_finder ${OpenCV_LIBS} )
#target_link_libraries( color_detection ${OpenCV_LIBS} )
#target_link_libraries( MatchTemplate_Demo ${OpenCV_LIBS} )
